--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Summer Research Fellow</h3>
                             <div class="subheading mb-3">Science Academies' Summer Research Fellowship Programme</div>
-                            <p>Summer fellowship for studensts and teachers offered by Indian Academy of Sciences, The National Academy of Sciences and Indian National Science Academy for 8 weeks to work with scientists all around the institutions in India. I'm currently working as a group of four under the mentorship of Dr Shashi Bhushan Pandey from ARIES, nainital.</p>
+                            <p>Summer fellowship for studensts and teachers offered by Indian Academy of Sciences, The National Academy of Sciences and Indian National Science Academy for 8 weeks to work with scientists all around the institutions in India. I worked on the estimation of microphysics parameters of External forward shockwaves from Gamma Ray Burst (shockwaves are the resultant of these stellar bursts and the microphysics parameters are a characterization of the shockwaves) under the mentorship of Dr Shashi Bhushan Pandey from ARIES, nainital.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -85,7 +85,7 @@
                             <div class="subheading mb-3">Introductory Summer School for Astronomy and Astrophysics, IUCAA, Pune</div>
                             <p>Students are selected to a 5 weeks of several lecture series covering topics from Radiative processes to Gravitaional Waves and Compact binaries. It involved lectures and demonstrations from a number of fellow scientists and proffesors from IUCAA</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - June 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -108,15 +108,15 @@
                             <div class="subheading mb-3">TOV equation - Numerical Solution </div>
                                 <p>Solved Tolman Oppenheimer Volkoff equation for the Relativistic case numerical and Inferred the maximum mass to be 0.7 mass of the sun with only degenaracy pressure support.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2020 - Nov 2020</span></div>
                             
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Galaxy Morphology Classifier (In Progress)</div>
-                                <p>Solved Tolman Oppenheimer Volkoff equation for the Relativistic case numerical and Inferred the maximum mass to be 0.7 mass of the sun with only degenaracy pressure support.</p>
+                            <div class="subheading mb-3">Star-Spiral-Elliptical Galaxy Classifier (In Progress)</div>
+                                <p>Resnet Classifier finetuned to classify stars, spiral and elliptical galaxies built using the fastai framework from SDSS dataset.</p>
                             </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Feb 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2021 - Feb 2021</span></div>
                     </div>
                 </div>
             </section>
