--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Madras Christian College, University of Madras, India</h3>
                             <div class="subheading mb-3">Bachelor of Science, Physics</div>
-                            <div><b>Major Courses taught so far : </b>Classical mechanics, Thermodynamics and Statistical mechanics, Electromagnetism, Wave physics, Physics of applied devives, Mathematical methods</div>
+                            <div><b>Major Courses taught so far : </b>Classical mechanics, Thermodynamics and Statistical mechanics, Electromagnetism, Wave physics, Physics of applied devives, Mathematical methods, Quantum Mechanics and Relativity, Electronics, Atomic Physics, Optics and Spectroscopy</div>
                             <div><b>Supporting Math Courses taught so far : </b> Ordinary and Partial Differential
                                 Equations, Analytical Geometry, Variational Calculus, Advanced Integral Calculus, Multivariable
                                 Calculus, Vector Calculus, Fourier Series & Transform and Laplace
                                 Transform</div>
-                                <div><b>Supporting Programming Courses taught so far : </b>Object Oriented Programming in C++ and Python</div>
+                                <div><b>Supporting Programming Courses taught so far : </b>Basic tools in C, Object Oriented Programming in C++ and Python</div>
                             <p><b>GPA :</b> 8.5/10</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2019 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">AMM MAtriculation Higher Secondary School, Chennai, India</h3>
+                            <h3 class="mb-0">AMM Matriculation Higher Secondary School, Chennai, India</h3>
                             <div class="subheading mb-3">Higher School Diploma</div>
                             <p><b>GPA :</b> 9.06/10</p>
                         </div>
@@ -171,17 +171,21 @@
                     <h2 class="mb-5">Interests</h2>
                     <ul>
                         <li>
-                            Gravitational Waves from Compact binaries and Black holes - Simulating different waves from several physical properties
+                            Dynamics of Compact Binaries and Gravitational Waves
                         </li>
                         <li>
-                            Post Newtonian study of Compact binaries - Dynamics of compact binaries
+                            Physics around and inside Black Holes
                         </li>
                         <li>
-                            Progenitors of Gamma Ray Bursts - Finding the physical properties of the progenitor from the after math glow
+                            Computational Astrophysics - Star Formation and Mergers of Compact Binaries
+                        <\li>
+                        <li>
+                            Early Universe and Cosmology
                         </li>
                         <li>
                             Generative Adversarial Networks, Image Classification and Segregation
                         </li>
+                        
                     </ul>
                 </div>
             </section>
@@ -218,7 +222,15 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Best Outgoing Student of the Year - AMM High Secondary School
+                            Physics Alumni Student Scholarship (2020 - 2022) - Madras Christian College
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            AMM School Scholarship (2014 - 2019) - AMM Matric Higher Secondary School
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Best Outgoing Student of the Year - AMM Matric Higher Secondary School
                         </li>
                     </ul>
                 </div>
