--- a/index.html
+++ b/index.html
@@ -235,6 +235,62 @@
                     </ul>
                 </div>
             </section>
+            <!-- Awards-->
+            <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Certificates and links</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/Certificate-F-2020-E6A4BDE4EFD-b425e347d8dbca418c77c84bfa005702.pdf">Gold Honour Certificate in the International Astronomy and Astrophysics Competition</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/SRFPCompletionCert.pdf">Science Academies' Summer Research Fellowship Programme</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/PTTS 2021 Certificate_Level 1_Vikash Kotteeswaran_48">Physics Training and Talent Search Summer Program</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/IARF - Vikash Kotteeswaran.pdf">Introductory Summer School in Astronomy and Astrophysics</a>
+                        </li>
+<!--                         <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/IARF - Vikash Kotteeswaran.pdf">Research Science Initiative - Chennai</a>
+                        </li> -->
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/IARF - Vikash Kotteeswaran.pdf">International Advanced Space Science Course</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/Data Driven Astronomy Coursera.pdf">Data-driven Astronomy</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/Coursera-Deep Learning.pdf">Neural Networks and Deep Learning</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/Regularization_Optimization">Improving Deep Neural Networks</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/Structuring_ML_projects.pdf">Structuring Machine Learning Projects</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/Vikash Kotteeswaran - CodeAstro.pdf">Code/Astro</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/IARF - Vikash Kotteeswaran.pdf">Intro to Gamma Ray Bursts, Employing Deep Learning in Protoplanetaery systems, Are black holes traversable?</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
