--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certifications/IARF - Vikash Kotteeswaran.pdf">Introductory Summer School in Astronomy and Astrophysics</a>
+                            <a href="certifications/ISSAA_CERT.pdf">Introductory Summer School in Astronomy and Astrophysics</a>
                         </li>
 <!--                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
