--- a/index.html
+++ b/index.html
@@ -303,11 +303,15 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Intro to Gamma Ray Bursts.pdf">Are black holes traversable?</a>
+                            <a href="ppts/GRB.pdf">Are black holes traversable?</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             <a href="ppts/Unruh Effect.pdf">Unruh Effect</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="ppts/Lorentz group - RSIC 2018.pptx.pdf">Lorentz group</a>
                         </li>
                     </ul>
                 </div>
