--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/PTTS 2021 Certificate_Level 1_Vikash Kotteeswaran_48">Physics Training and Talent Search Summer Program</a>
+                            <a href="certificate/PTTS_2021_Certificate_Level1_Vikash_Kotteeswaran_48">Physics Training and Talent Search Summer Program</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
@@ -262,15 +262,15 @@
                         </li> -->
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/IARF - Vikash Kotteeswaran.pdf">International Advanced Space Science Course</a>
+                            <a href="certificate/IARF_Vikash_Kotteeswaran.pdf">International Advanced Space Science Course</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/Data Driven Astronomy Coursera.pdf">Data-driven Astronomy</a>
+                            <a href="certificate/Data_Driven_Astronomy_Coursera.pdf">Data-driven Astronomy</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/Coursera-Deep Learning.pdf">Neural Networks and Deep Learning</a>
+                            <a href="certificate/Coursera_Deep_Learning.pdf">Neural Networks and Deep Learning</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
@@ -282,7 +282,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/Vikash Kotteeswaran - CodeAstro.pdf">Code/Astro</a>
+                            <a href="certificate/Vikash_Kotteeswaran_CodeAstro.pdf">Code/Astro</a>
                         </li>
                     </ul>
                 </div>
@@ -295,23 +295,23 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Intro to Gamma Ray Bursts.pdf">Intro to Gamma Ray Bursts</a>
+                            <a href="ppts/GRB.pdf">Intro to Gamma Ray Bursts</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Employing Deep Learning in Protoplanetaery systems.pdf">Employing Deep Learning in Protoplanetaery systems</a>
+                            <a href="ppts/Employing_Deep_Learning_in_Physics.pdf">Employing Deep Learning in Protoplanetaery systems</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/GRB.pdf">Are black holes traversable?</a>
+                            <a href="ppts/ARE_BLACK_HOLES_TRAVERSABLE.pdf">Are black holes traversable?</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Unruh Effect.pdf">Unruh Effect</a>
+                            <a href="ppts/Unruh_Effect.pdf">Unruh Effect</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Lorentz group - RSIC 2018.pptx.pdf">Lorentz group</a>
+                            <a href="ppts/Lorentz_group_RSIC_2018.pdf">Lorentz group</a>
                         </li>
                     </ul>
                 </div>
