--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/PTTS_2021_Certificate_Level1_Vikash_Kotteeswaran_48">Physics Training and Talent Search Summer Program</a>
+                            <a href="certificate/PTTS_2021_Certificate_Level1_Vikash_Kotteeswaran_48.pdf">Physics Training and Talent Search Summer Program</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
