--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/Regularization_Optimization">Improving Deep Neural Networks</a>
+                            <a href="certificate/Regularization_Optimization.pdf">Improving Deep Neural Networks</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
