--- a/index.html
+++ b/index.html
@@ -242,23 +242,27 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/Certificate-F-2020-E6A4BDE4EFD-b425e347d8dbca418c77c84bfa005702.pdf">Gold Honour Certificate in the International Astronomy and Astrophysics Competition</a>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             <a href="certificate/SRFPCompletionCert.pdf">Science Academies' Summer Research Fellowship Programme</a>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/PTTS_2021_Certificate_Level1_Vikash_Kotteeswaran_48.pdf">Physics Training and Talent Search Summer Program</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             <a href="certificate/ISSAA_CERT.pdf">Introductory Summer School in Astronomy and Astrophysics</a>
                         </li>
-<!--                         <li>
+                        <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certifications/IARF - Vikash Kotteeswaran.pdf">Research Science Initiative - Chennai</a>
+                            <a href="certificate/Vikash_Kotteeswaran_CodeAstro.pdf">Code/Astro</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certificate/Certificate-F-2020-E6A4BDE4EFD-b425e347d8dbca418c77c84bfa005702.pdf">Gold Honour Certificate in the International Astronomy and Astrophysics Competition</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certificate/PTTS_2021_Certificate_Level1_Vikash_Kotteeswaran_48.pdf">Physics Training and Talent Search Summer Program</a>
+                        </li>
+                   <!-- <li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                            <a href="certifications/RSIC.pdf">Research Science Initiative - Chennai</a>
                         </li> -->
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
@@ -280,10 +284,6 @@
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
                             <a href="certificate/Structuring_ML_projects.pdf">Structuring Machine Learning Projects</a>
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="certificate/Vikash_Kotteeswaran_CodeAstro.pdf">Code/Astro</a>
-                        </li>
                     </ul>
                 </div>
             </section>
@@ -295,7 +295,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/GRB.pdf">Intro to Gamma Ray Bursts</a>
+                            <a href="ppts/Unruh_Effect.pdf">Unruh Effect</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
@@ -307,11 +307,11 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Unruh_Effect.pdf">Unruh Effect</a>
+                            <a href="ppts/Lorentz_group_RSIC_2018.pdf">Lorentz group</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <a href="ppts/Lorentz_group_RSIC_2018.pdf">Lorentz group</a>
+                            <a href="ppts/GRB.pdf">Intro to Gamma Ray Bursts</a>
                         </li>
                     </ul>
                 </div>
