--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span class="text-white-50" style="color: rgb(235, 106, 106);">Kotteeswaran</span>
                     </h1>
                     <div class="mb-5" style="color: rgb(202, 198, 198);">
-                        <b style="font-size:large;">I'm a third year Undergraduate majoring in physics at Madras Christian College, Chennai, India. Currently being offered a Fellowship from Science Academies' Summer Research Fellowship Programme. I'm interested in finding whether gravitational waves could possibly be knotted with any other knowns or unknowns and understand how it is essential in understanding the physics of the extremes and the unknowns.   </b>
+                        <b style="font-size:large;">I'm a third year Undergraduate majoring in physics at Madras Christian College, Chennai, India. I'm interested in finding whether gravitational waves could possibly be knotted with any other knowns or unknowns and understand how it is essential in understanding the physics of the extremes and the unknowns.   </b>
                         
                     </div>
                     <p class="lead mb-5" style="color: rgb(202, 198, 198);">It is all those nights that I spent gazing upon the stars and wondering if I could ever look them upclose, It is all those illustrations of stars and stuff that made me curious and fall for physics. Thanks to all the sci-fi movies and space science videos, I was able to fly, reach for the stars, fight aliens and sink a spaceship in the shore near where I live (Of course, In my dreams). As time went by, They drove me my curiosity towards astrophysics and towards anything that feels literally out of this world. 
